Fixed chatroom bugs

--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -67,7 +67,7 @@
 			</div>
 			<div class="input-section source-lang-section folded">
 				<!-- <input class="source-lang" type="source-lang" name="lang" placeholder="ENTER THE SOURCE LANGUAGE" /> -->
-				<select id="select_language" style="width: 320px">
+				<select id="select_language" style="width: 320px" onupdate="updateCountry()">
 					<option value="af-ZA">Afrikaans</option>
 					<option value="am-ET">አማርኛ</option>
 					<option value="az-AZ">Azərbaycanca</option>
@@ -129,25 +129,23 @@
 					<option value="hi-IN">हिन्दी</option>
 					<option value="th-TH">ภาษาไทย</option>
 				</select>
-				<div class="animated-button" onclick="updateCountry()">
-					<div class="newroom">
-						<div id="enter">
-							<button id="create">Submit</button>
-						</div>
-					</div>
-				</div>
-					<p><br><br><br><br><br><br>
 
-					<div id="cr-roomlist">
-						<ul class="roomlist">
-						</ul>
-					</div>
-					</p>
 				<div class="newroom">
 					<div id="enter">
 						<button id="create">Submit</button>
 					</div>
 				</div>
+
+				<div class="animated-button">
+					<div class="newroom">
+						<div id="enter">
+							<button id="lecture">Go to LectureRoom</button>
+						</div>
+					</div>
+				</div>
+					<p><br><br><br><br><br><br>
+					</p>
+
 					<span class="icon-repeat-lock">
 						<i class="fa fa-language"></i>
 					</span>
@@ -157,22 +155,23 @@
 				</div>
 			</div>
 
-			<div id="cr-roomlist">
-				<ul class="roomlist">
-				</ul>
-			</div>
+
+	</div>
+
+	<div id="cr-roomlist">
+		<ul class="roomlist">
+		</ul>
 	</div>
 	<script language="javascript">
-		localStorage.setItem("sourceLang","af-ZA");
+		localStorage.setItem("sourceLang","af");
 		function updateCountry() {
 			var lang = $("#select_language").val();
 			var res = lang.slice(0, 2);
 			localStorage.setItem("sourceLang", res);
-			var carriage = prompt("You want to confirm your selection (y/n)");
-			if (carriage === 'y' || carriage === 'Y' || carriage === 'Yes' || carriage === 'YES' || carriage === 'yes') {
-				window.location.href="https://iiita-lectures.herokuapp.com/chatRoom"
-			}
 		}
+		$('#lecture').click(function () {
+		  window.location.href = "https://iiita-lectures.herokuapp.com/reqtran";
+        })
 	</script>
 	<script type="text/javascript" src="/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="/script.js"></script>
