--- a/views/room.ejs
+++ b/views/room.ejs
@@ -27,14 +27,19 @@
 		});
 
 
-      messages.on('messagefeed', function(data){
-        var msgs = JSON.parse(data);
-        updateMessageFeed(msgs);
-      })
+		messages.on('messagefeed', function(data){
+			var msgs = JSON.parse(data);
+			updateMessageFeed(msgs);
+		})
 
-      function updateMessageFeed(message) {
-        $('#msg').text(message);
-      }
+		function updateMessageFeed(data){
+			var str = '<li>';
+				str += '<div class="msgbox">';
+				str +=	'<div><p id="msg-" class="msg">' + data + '</p></div>';
+				str +=	'</div>';
+				str += '</li>';
+			$(str).hide().prependTo($('.messages')).slideDown(100);
+		}
 
 	})
 	</script>
@@ -63,9 +68,6 @@
 					</ul>
 			</div>
 
-		</div>
-		<div class="msgbox">
-			<div><p id="msg"></p></div>
 		</div>
 		<div id="third">
 			<div class="active-users">
