--- a/views/roomc.ejs
+++ b/views/roomc.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="../socket/socket.js"></script>
     <script>
       // anon function in this ($) context
       $(function(){
