Fixed socket again

--- a/views/page.ejs
+++ b/views/page.ejs
@@ -8,7 +8,7 @@
     <script src="./prof-chatroom_files/cb=gapi.loaded_0" async=""></script>
     <script type="text/javascript" async="" src="./prof-chatroom_files/plusone.js.download" gapi_processed="true"></script>
     <script type="text/javascript" async="" src="./prof-chatroom_files/ga.js.download"></script>
-    <script src="../socket/socket.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
     <script>
         (function (e, p) {
             var m = location.href.match(/platform=(win8|win|mac|linux|cros)/);
