Differentiated profs and students

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
 <script language="javascript">
   function check(form) {
     if(form.EmailProf.value == "professor" && form.PasswordProf.value == "mypass") {
-      window.open('../prof-chatroom/prof-chat.html')
+      window.open('https://iiita-lectures.herokuapp.com/profs');
     }
     else {
       alert("Error Password or Username")
