Removed some bugs

--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -148,6 +148,7 @@
         <% } %>
 			</div>
 
+	<% if(a==1){ %>
 	<div class="newroom">
 		<div id="enter">
 			<button id="create">Submit</button>
@@ -164,6 +165,9 @@
 		</div>
 	</div>
 
+	<%}%>
+
+	<h1>LECTURE ROOMS</h1>
 	<div id="cr-roomlist">
 		<ul class="roomlist">
 		</ul>
