--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -173,7 +173,7 @@
 		</ul>
 	</div>
 	<script language="javascript">
-		localStorage.setItem("sourceLang","af");
+		localStorage.setItem("sourceLang","en");
 		function updateCountry() {
 			var lang = $("#select_language").val();
 			var res = lang.slice(0, 2);
