--- a/views/page.ejs
+++ b/views/page.ejs
@@ -601,6 +601,7 @@
                 copy_info.style.display = 'none';
                 email_info.style.display = 'none';
             }
+            var x = localStorage.getItem("sourceLang");
 
             setInterval(function () {
                 var config = {
@@ -608,7 +609,7 @@
                 }
                 var str = document.getElementById('final_span').innerHTML;
                 console.log(document.getElementById('final_span').innerHTML);
-                axios.get('https://iiita-lectures.herokuapp.com/translate/' + localStorage.getItem("sourceLang") + '?data=' + str).then((response) => {
+                axios.get('https://iiita-lectures.herokuapp.com/translate/' + x + '?data=' + str).then((response) => {
                     console.log(response);
                     if (response.data !== '') {
                       var messages = io.connect('https://iiita-lectures.herokuapp.com/messages');
