--- a/views/page.ejs
+++ b/views/page.ejs
@@ -609,19 +609,19 @@
                 }
                 var str = document.getElementById('final_span').innerHTML;
                 console.log(document.getElementById('final_span').innerHTML);
-                axios.get('https://iiita-lectures.herokuapp.com/translate/' + x + '?data=' + str).then((response) => {
-                    console.log(response);
-                    if (response.data !== '') {
+                //axios.get('https://iiita-lectures.herokuapp.com/translate/' + x + '?data=' + str).then((response) => {
+                  //  console.log(response);
+                    //if (response.data !== '') {
                       var messages = io.connect('https://iiita-lectures.herokuapp.com/messages');
                         messages.emit('newMessage', {
                             room_number: localStorage.getItem("Room"),
-                            message: response.data
+                            message: str
                         })
-                    }
+                    //}
 
-                }).catch(() => {
-                    console.log('tel lagao');
-                })
+                //}).catch(() => {
+                 //   console.log('tel lagao');
+                //})
             }, 3000);
 
 
