--- a/views/page.ejs
+++ b/views/page.ejs
@@ -601,7 +601,7 @@
                 copy_info.style.display = 'none';
                 email_info.style.display = 'none';
             }
-            var x = localStorage.getItem("sourceLang");
+            //var x = localStorage.getItem("sourceLang");
 
             setInterval(function () {
                 var config = {
@@ -612,12 +612,12 @@
                 //axios.get('https://iiita-lectures.herokuapp.com/translate/' + x + '?data=' + str).then((response) => {
                   //  console.log(response);
                     //if (response.data !== '') {
-                var room_set = localStorage.getItem("room_data");
-                room_set = JSON.parse(room_set);
+                //var room_set = localStorage.getItem("room_data");
+                //room_set = JSON.parse(room_set);
 
 
-                if(str!='') {
-                    var messages = io.connect('http://localhost:9000/messages/os');
+                if(str != '') {
+                    var messages = io.connect('http://localhost:9000/messages/'+'<%= course%>');
                     messages.on('connect',function(){
                        alert('connected');
                     });
@@ -626,7 +626,7 @@
                     //console.log(room_set[0]);
                     //for (var i = 0; i < room_set.length; i++) {
                         messages.emit('newMessage', {
-                            room_number: room_set[i],
+                            room_number: room_set,
                             message: str
                         })
                     //}
