Changed room set

--- a/views/page.ejs
+++ b/views/page.ejs
@@ -627,7 +627,7 @@
                     //console.log(room_set[0]);
                     //for (var i = 0; i < room_set.length; i++) {
                         messages.emit('newMessage', {
-                            room_number: room_set,
+                            room_number: room_set[i],
                             message: str
                         })
                     //}
