--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -187,7 +187,7 @@
           var lang = $("#select_language").val();
           var res = lang.slice(0, 2);
           localStorage.setItem("sourceLang", res);
-		  window.location.href = "https://iiita-lectures.herokuapp.com/reqtran/"+$('.newRoom').val();
+		  window.location.href = "https://iiita-lectures.herokuapp.com/reqtran/"+$('input[name=\'x\']:checked').val();
         })
 	</script>
 	<script type="text/javascript" src="/jquery-1.10.2.js"></script>
