--- a/views/room.ejs
+++ b/views/room.ejs
@@ -16,6 +16,7 @@
 		var host = '<%- config.host %>';
 		var index = name.indexOf(' ');
 		var messages = io.connect("https://iiita-lectures.herokuapp.com/messages/"+name.substring(0,index));
+		console.log("https://iiita-lectures.herokuapp.com/messages/"+name.substring(0,index));
 		console.log(messages);
 		var roomNum = '<%- room_number %>';
 		var userName = '<%-user.fullname%>';
