Made changes to user page

--- a/views/gethelp.ejs
+++ b/views/gethelp.ejs
@@ -164,7 +164,7 @@
 	<div class="animated-button">
 		<div class="newroom">
 			<div id="hoho">
-				<button id="lecture">Go to LectureRoom</button>
+				<button id="lecture">Go to Lecture Box</button>
 			</div>
 		</div>
 	</div>
